# devscope

./: .gitignore  CONTRIBUTING.md  FIXES_APPLIED.md  GITHUB_OPTIMIZATION.md  HEALTH.md  INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE.md  RELEASE_QUICKSTART.md  pyproject.toml
.github/: PR_COMMENT_EXAMPLE.md  SOCIAL_PREVIEW_SPECS.md  social-preview-template.txt
.github/workflows/: benchmarks.yml  ci.yml  devscope-pr.yml  health.yml  release.yml
research/: README.md  analyze_repo.py  analyze_self.py  index.json
research/devscope_self_analysis/: metadata.json  report.md  summary_compact.txt
scripts/: benchmarks.sh  check.sh  create-social-preview.sh  optimize-github.sh  setup.sh
src/devscope/: __init__.py  analyzer.py  cache.py  cli.py  formatters.py  models.py  utils.py
src/devscope/analyzers/: __init__.py  complexity.py  dependencies.py  git_intel.py  hotspots.py  scoring.py  tests.py
tests/: test_analyzer.py  test_cache.py  test_ci_thresholds.py  test_cli.py  test_complexity.py  test_dependencies.py  test_json_output.py  test_scoring.py  test_summary.py  test_test_detector.py  test_utils.py
